[package]
name = "f7disco-home"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.4.0", features = [
    "defmt",
    "stm32f746ng",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-net = { version = "0.7.1", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embedded-io-async = { version = "0.7.0" }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
critical-section = "1.1.2"
stm32-fmc = "0.3.2"
embedded-graphics = "0.8"
embedded-alloc = { version = "0.6.0" }
embedded-layout = "0.4"
kolibri-embedded-gui = { git = "https://github.com/Yandrik/kolibri", branch = "main" }

[profile.release]
debug = 2
lto = "thin"
